[gd_scene load_steps=6 format=2]

[ext_resource path="res://Lights/Textures/light_orb.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ReturnHomeBeacon.gd" type="Script" id=2]
[ext_resource path="res://World/common_scenes/textures/ReturnBeaconIndicator_placeholder.png" type="Texture" id=3]
[ext_resource path="res://World/common_scenes/textures/ReturnBeacon_placeholder.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 62.0345

[node name="ReturnHomeBeacon" type="Area2D" groups=[
"mini_map",
]]
gravity_point = true
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.296936, 47.2177 )
shape = SubResource( 1 )

[node name="Indicator" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.247059 )
position = Vector2( 0, 65 )
texture = ExtResource( 3 )

[node name="BeaconSign" type="Sprite" parent="."]
position = Vector2( 0, 18 )
z_as_relative = false
texture = ExtResource( 4 )

[node name="BeaconLight" type="Light2D" parent="BeaconSign"]
texture = ExtResource( 1 )
texture_scale = 2.0
color = Color( 0.505882, 0.490196, 1, 1 )
energy = 1.17

[node name="TimerBox" type="HBoxContainer" parent="BeaconSign"]
margin_left = -48.0
margin_top = -74.0
margin_right = 48.0
margin_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 25, 25 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerText" type="Label" parent="BeaconSign/TimerBox"]
visible = false
margin_left = 40.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 19.0
text = "10"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 18 )
z_as_relative = false
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="UpperPos_Hover" type="Position2D" parent="."]
position = Vector2( 0, -17 )

[node name="LowerPos_Hover" type="Position2D" parent="."]
position = Vector2( 0, 18 )

[node name="ReturnTimer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_ReturnHomeBeacon_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_ReturnHomeBeacon_area_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="ReturnTimer" to="." method="_on_ReturnTimer_timeout"]
